# AMM_core

./: .codacyignore  .coverage  .env  .gitignore  Makefile  README.md  alembic.ini  config.json  extensions.json  pyproject.toml  tasks.json  test_value
.codacy/: codacy.yaml
alembic/: env.py
alembic/versions/: 20260219_0001_relax_file_track_constraints.py  20260222_0002_make_users_dob_nullable.py  20260222_0003_make_tasks_end_time_nullable.py  20260311_0004_add_track_metadata_and_performers.py
deploy/systemd/: amm-core.service
scripts/: migrate_db_schema.py  run-local-server.sh
src/: Enums.py  Exceptions.py  dbmodels.py  enums.py  main.py  models.py  playerservice.py
src/AudioUtils/: __init__.py  acoustid.py  lyrics_getter.py  mb_client.py  media_parser.py  normalizer.py  tagger.py  trimmer.py
src/AudioUtils/utils/: __init__.py  acoustidhttpclient.py  durationparser.py  simpletagger.py
src/Clients/: MB_Client.py  mb_client.py
src/DB/: models.py
src/GraphQL/: GraphQL.py  Mapping.py  Schemas.py  __init__.py  graphql.py  mapping.py  schemas.py
src/Server/: __init__.py  auth.py  graphql.py  mapping.py  mutation.py  playerservice.py  query.py  schemas.py  subscription.py
src/Singletons/: DB.py  Logger.py  Stack.py  __init__.py  config.json  config.py  database.py  env_config.py  logger.py  stack.py
src/Tasks/: ArtGetter.py  AudioIP.py  Importer.py  LyricsGetter.py  MB_Client.py  MediaParser.py  Normalizer.py  Parser.py  Tagger.py  Task.py  TaskManager.py  Trimmer.py  __init__.py  albumart_checker.py  art_getter.py  converter.py  deduper.py  duplicate_checker.py  exporter.py  fingerprinter.py  importer.py  lyrics_getter.py  normalizer.py  parser.py  scanner.py  sorter.py  tagger.py  task.py  taskmanager.py  trimmer.py
src/Utils/: MediaParser.py
src/auth/: bootstrap.py  dependencies.py  jwt_utils.py  passwords.py  rate_limit.py
src/config/: __init__.py  defaults.py  env_loader.py  file_loader.py  manager.py  merger.py  migrations.py  models.py  watcher.py
src/core/: alembic_runner.py  audioutil_base.py  audioutil_manager.py  bootstrap.py  concurrency.py  concurrency_mixin.py  dbmodels.py  decorators.py  enums.py  exceptions.py  file_utils.py  models.py  plugin_base.py  plugin_base.py.bak  plugin_utils.py  processor_base.py  processor_loop.py  registry.py  stage.py  stage_manager.py  stage_tracker.py  task_base.py  taskmanager.py  types.py
src/legacy/: README.md
src/legacy/GraphQL/: GraphQL.py  Mapping.py  Schemas.py
src/legacy/Server/: auth.py
src/mixins/: autofetch.py
src/plugins/audio_utils/: acoustid.py  albumart_checker_util.py  converter_util.py  dedupe_files.py  directory_scanner.py  extract_fingerprint_entities.py  fingerprint_file.py  lyrics_getter_util.py  mb_client.py  media_parser.py  normalizer.py  spatializer_util.py  tagger.py  trimmer.py  validate_fingerprint_metadata.py
src/plugins/processors/: DuplicateScanProcessor.py  exporter.py  scanner.py
src/plugins/tasks/: albumart_checker.py  (+12 more)
tests/: conftest.py  import_test_utils.py  test_auth_rate_limit.py  test_google_login_insert_params.py  test_importer.py  test_user_mutation_admin_auth.py  tests_task.py  tests_taskmanager.py
tests/AudioUtils/: test_acoustid.py  test_init.py  test_lyrics_getter.py  test_mb_client.py
tests/Singletons/: test_config.py
tests/Tasks/: test_importer.py  tests_task.py  tests_taskmanager.py
tests/mixins/: models.py  test_autofetchable.py  test_autofetchable_deep.py  test_autofetchable_mocking.py  test_autofetchable_models.py
tests/singletons/: test_config.py
typings/acoustid/: __init__.pyi
typings/lyricsgenius/: __init__.pyi  __main__.pyi  auth.pyi  errors.pyi  genius.pyi  utils.pyi
typings/pydub/: audio_segment.pyi  generators.pyi  pyaudioop.pyi  scipy_effects.pyi
(+33 files in other folders)
