[project]
name = "amm-core"
version = "0.1.0"
description = "Audioiphile's Music Manager Server Core"
authors = [
    { name = "Mattijs Snepvangers", email = "pegasus.ict@gmail.com" },
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "chromaprint>=0.5",
    "click>=8.1.8",
    "configargparse>=1.7",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "lyricsgenius>=3.6.2",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pyacoustid>=1.3.0",
    "pydantic>=2.11.4",
    "pydub>=0.25.1",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "strawberry-graphql[fastapi]",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "src"

[tool.ruff]
lint.extend-select = ["PTH"]
