[project]
name = "amm-core"
version = "0.1.0"
description = "Audioiphile's Music Manager Server Core"
authors = [
    { name = "Mattijs Snepvangers", email = "pegasus.ict@gmail.com" },
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "asyncio>=3.4.3",
    "asyncmy>=0.2.10",
    "authlib>=1.6.0",
    "chromaprint>=0.5",
    "click>=8.1.8",
    "configargparse>=1.7",
    "fastapi[all]>=0.115.12",
    "lyricsgenius>=3.6.2",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "passlib>=1.7.4",
    "pyacoustid>=1.3.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.10.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-vlc>=3.0.21203",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "strawberry-graphql[fastapi]",
    "uvicorn[standard]>=0.34.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "src"

[tool.ruff]
lint.extend-select = ["PTH"]
